# horo-api

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  env.example  sefstars.txt
api/: Cargo.toml
api/src/: args.rs  error.rs  lib.rs  main.rs  request.rs  routers.rs  swagger.rs
api/src/handlers/: compare_horoscop.rs  direction.rs  firdaria.rs  horo.rs  house.rs  mod.rs  profection.rs  qizheng.rs  quadrant_process.rs  return_horoscop.rs  transit.rs
api/src/request/: mod.rs
api/src/responser/: mod.rs
api/src/swagger/: horo.rs  mod.rs  qizheng.rs
chart/: Chart.yaml  values.yaml
chart/templates/: deployment-api.yaml
geo_position/: Cargo.toml  README.md
geo_position/src/: error.rs  lib.rs
horo/: Cargo.toml
horo/src/: aspect.rs  config.rs  error.rs  firdaria.rs  fixed_star.rs  geo_position.rs  horo_date_time.rs  horoscope.rs  house.rs  lib.rs  profection.rs  quadrant_process.rs  return_horoscop.rs  utils.rs
horo/src/direction/: asc.rs  mc.rs  mod.rs  planet.rs  term.rs  utils.rs
horo/src/horoscope/: mod.rs
horo/src/horoscope/tests/: horoscope.rs  horoscope_compare.rs  mod.rs
horo/src/planet/: mod.rs
horo/src/planet/tests/: mod.rs
horo/src/planet/tests/antiscoin/: both_non_orb_0.rs  both_orb_0.rs  mod.rs
horo/src/planet/tests/compare_has_aspect/: asc_aspect_asc.rs  asc_aspect_planet_plant.rs  mod.rs  planet_aspect_asc.rs  planet_aspect_planet.rs
horo/src/planet/tests/contraantiscia/: both_non_orb_0.rs  both_orb_0.rs  mod.rs
horo/src/planet/tests/no_compare_has_aspect/: asc_apsect_planet.rs  mod.rs  planet_aspect_planet.rs
horo/src/return_horoscop/tests/: mod.rs  return_horoscop.rs
horo/src/snapshots/: horo__fixed_star__tests__calc_fixed_star_long_snapshot.snap
horo_date_time/: Cargo.toml  README.md
horo_date_time/src/: error.rs  lib.rs
qizheng/: Cargo.toml
qizheng/src/: config.rs  dong_wei.rs  error.rs  horo.rs  house.rs  lib.rs  lunar_mansions.rs  planet.rs  ten_gods.rs  transformed_stars.rs
qizheng/src/planet/: mod.rs  name.rs  planet_speed_state.rs  tests.rs
qizheng/src/snapshots/: qizheng__dong_wei__tests__calc_dong_wei.snap  qizheng__horo__tests__horoscope.snap  qizheng__lunar_mansions__tests__calc_distance_star_long_snapshot.snap
qizheng/src/transformed_stars/: mod.rs  tests.rs
ui/: Dockerfile  README.md  package-lock.json  package.json
ui/src/: index.html
ui/src/app/: app-routing.module.ts  app.module.ts
ui/src/app/base-component/image-basic/: image-basic.ts
ui/src/app/clean/: clean.page.ts
ui/src/app/home/: home.page.html  home.page.scss  home.page.ts
ui/src/app/horo-common/: horo-common.module.ts
ui/src/app/native/: image.component.html  image.component.scss  image.component.ts  native-routing.module.ts  native.module.ts  native.page.html  native.page.ts
ui/src/app/power/: power.page.html  power.page.scss  power.page.ts
ui/src/app/process/: path.ts  process-routing.module.ts  process.module.ts  process.page.html  process.page.ts
ui/src/app/process/compare/: compare.component.html  compare.component.ts
ui/src/app/process/firdaria/: firdaria.component.html  firdaria.component.ts
ui/src/app/process/lunar-return/: lunar-return.component.html  lunar-return.component.spec.ts  lunar-return.component.ts
ui/src/app/process/profection/: profection.component.html  profection.component.ts
ui/src/app/process/return/: return.component.html  return.component.ts
ui/src/app/process/solar-return/: solar-return.component.html  solar-return.component.scss  solar-return.component.spec.ts  solar-return.component.ts
ui/src/app/process/transit/: transit.component.html  transit.component.spec.ts  transit.component.ts
ui/src/app/qizheng/: qizheng.page.html  qizheng.page.ts
ui/src/app/qizheng/horo/: horo.component.html  horo.component.scss  horo.component.ts
ui/src/app/services/api/: api.service.ts
ui/src/app/services/config/: horo-config.service.ts  qizheng-config.service.ts
ui/src/app/services/horostorage/: horostorage.service.ts
ui/src/app/services/init/: app-init.ts
ui/src/app/type/enum/: process.ts  zodiac.ts
ui/src/app/type/interface/: qizheng.ts  request-data.ts  respone-data.ts  response-data.ts  response-qizheng.ts
ui/src/app/utils/: horo-math.ts  image-compare.ts  image.ts
ui/src/app/utils/image/: compare.ts  horo.ts  qizheng.ts
