[workspace]
resolver = "2"

members = ["horo", "api", "horo_date_time", "geo_position", "qizheng"]

[workspace.dependencies]

rust-swe = { git = "https://github.com/wlhyl/rust-swe.git" }
lunar_calendar = { git = "https://github.com/wlhyl/lunar-calendar.git", branch = "rust" }
ganzhiwuxing = { git = "https://github.com/wlhyl/ganzhiwuxin.git", branch = "rust" }

serde = { version = "1.0.228", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web", "vendored"] }

actix-web = "4.13.0"
actix-cors = "0.7.1"
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
log = "0.4.29"
log4rs = "1.4.0"
validator = { version = "0.20.0", features = ["derive", "unic"] }
actix-web-validator = "7.0.0"
serde_json = "1.0.149"

parameterized = "2.1.0"
insta = { version = "1.47.2", features = ["yaml"] }


[profile.release]
opt-level = 3 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 0
