[package]
name = "horo_api"
version = "0.2.3"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
swagger = [
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
    "horo/swagger",
    "horo_date_time/swagger",
    "geo_position/swagger",
    "qizheng/swagger",
    "lunar_calendar/swagger",
    "ganzhiwuxing/swagger",
]
cors = ["dep:actix-cors"]

[dependencies]
horo_date_time = { path = "../horo_date_time", features = ["serde"] }
geo_position = { path = "../geo_position", features = ["serde"] }
horo = { path = "../horo", features = ["serde"] }
qizheng = { path = "../qizheng", features = ["serde"] }

ganzhiwuxing = { git = "https://github.com/wlhyl/ganzhiwuxin.git", branch = "rust" }
lunar_calendar = { git = "https://github.com/wlhyl/lunar-calendar.git", branch = "rust" }

actix-cors = { version = "0.7.1", optional = true }
actix-web = "4.12.1"
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
log = "0.4.29"
log4rs = "1.4.0"

serde = { version = "1.0.228", features = ["derive"] }
# serde_json = "1.0.120"

# swagger
utoipa = { version = "5.4.0", features = ["actix_extras"], optional = true }
utoipa-swagger-ui = { version = "9.0.2", features = [
    "actix-web",
    "vendored",
], optional = true }

# 验证
# actix-web-validator = "5.0.1"
validator = { version = "0.20.0", features = ["derive", "unic"] }
actix-web-validator = "7.0.0"
# actix-web-validator = { git = "https://github.com/wlhyl/actix-web-validator.git" }
