[package]
name = "horo_api"
version = "1.0.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
swagger = [
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
    "horo/swagger",
    "horo_date_time/swagger",
    "geo_position/swagger",
    "qizheng/swagger",
    "lunar_calendar/swagger",
    "ganzhiwuxing/swagger",
]
cors = ["dep:actix-cors"]

[dependencies]
horo_date_time = { path = "../horo_date_time", features = ["serde"] }
geo_position = { path = "../geo_position", features = ["serde"] }
horo = { path = "../horo", features = ["serde"] }
qizheng = { path = "../qizheng", features = ["serde"] }

ganzhiwuxing = { workspace = true }
lunar_calendar = { workspace = true }

actix-cors = { workspace = true, optional = true }
actix-web = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }

serde = { workspace = true }

utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }

validator = { workspace = true }
actix-web-validator = { workspace = true }
