[package]
name = "geo_position"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]
swagger=["dep:utoipa"]

[dependencies]
serde = { version = "*", features = ["derive"], optional = true}
utoipa = {version="*", optional = true}
