[package]
name = "geo_position"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]
swagger=["dep:utoipa"]

[dependencies]
serde = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
