[package]
name = "horo"
version = "0.3.1"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde", "horo_date_time/serde", "geo_position/serde", "qizheng/serde"]
swagger = ["dep:utoipa", "horo_date_time/swagger", "geo_position/swagger", "qizheng/swagger"]

[dependencies]
horo_date_time = { path = "../horo_date_time" }
geo_position = { path = "../geo_position" }
qizheng = { path = "../qizheng" }

rust-swe = { git = "https://github.com/wlhyl/rust-swe.git" }

serde = { version = "*", features = ["derive"], optional = true }
utoipa = { version = "*", optional = true }

[dev-dependencies]
dotenvy = "0.15.7"
parameterized = "2.1.0"
insta = { version = "1.46.0", features = ["yaml"] }
