[package]
name = "horo"
version = "1.0.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde", "horo_date_time/serde", "geo_position/serde", "qizheng/serde"]
swagger = ["dep:utoipa", "horo_date_time/swagger", "geo_position/swagger", "qizheng/swagger"]

[dependencies]
horo_date_time = { path = "../horo_date_time" }
geo_position = { path = "../geo_position" }
qizheng = { path = "../qizheng" }

rust-swe = { workspace = true }

serde = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
dotenvy = { workspace = true }
parameterized = { workspace = true }
insta = { workspace = true }
