[package]
name = "horo_date_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]
swagger=["dep:utoipa"]

[dependencies]
rust-swe = { git = "https://github.com/wlhyl/rust-swe.git" }

serde = { version = "*", features = ["derive"], optional = true}
utoipa = {version="*", optional = true}